(api): Add endopoint to get all books
