# docs/swagger.yaml
@@ -47,6 +47,21 @@ definitions:
       error:
         type: string
     type: object
+  api.PaginatedBooksResponse:
+    properties:
+      books:
+        items:
+          $ref: '#/definitions/store.Book'
+        type: array
+      limit:
+        type: integer
+      page:
+        type: integer
+      total_items:
+        type: integer
+      total_pages:
+        type: integer
+    type: object
   api.PaginatedCommentsResponse:
     properties:
       items:
@@ -192,6 +207,43 @@ info:
   version: "1.0"
 paths:
   /books:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves all books with pagination.
+      parameters:
+      - default: 1
+        description: Page number
+        in: query
+        name: page
+        type: integer
+      - default: 20
+        description: Items per page
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.PaginatedBooksResponse'
+        "400":
+          description: 'Error: Invalid or missing id'
+          schema:
+            $ref: '#/definitions/api.HTTPError'
+        "404":
+          description: 'Error: Book not found'
+          schema:
+            $ref: '#/definitions/api.HTTPError'
+        "500":
+          description: 'Error: Internal server error'
+          schema:
+            $ref: '#/definitions/api.HTTPError'
+      summary: Get all books
+      tags:
+      - books
     post:
       consumes:
       - application/json
